# PlutoFramework

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: helloworld.cpp
src/: PlutoFramework.h  c_api.h  c_application.cpp  c_application.h  c_core.cpp  c_core.h  c_coreptr.h  c_intdef.h  c_main.h  c_module.h  c_msgbox.h  c_task.h  i_system.h  m_misc.h  m_string.cpp  m_string.h
src/modules/memalloc/: LICENSE  README.md  mod_memory.cpp  mod_memory.h
src/system/: stub_msgbox.cpp
src/system/generic/: README.md  i_log.cpp  i_task.cpp  i_wait.cpp
src/system/osx/: README.md  i_host.mm  i_log.mm  i_msgbox.mm  i_system.mm
src/system/posix/: README.md  i_host.cpp  i_system.cpp  i_wait.cpp
src/system/windows/: README.md  i_host.cpp  i_msgbox.cpp  i_system.cpp  pluto.rc.in  resource.h.in
